deploy app to vagrant - Kai

--- a/roles/hello/tasks/main.yml
+++ b/roles/hello/tasks/main.yml
@@ -1,33 +1,43 @@
 ---
 
- # - name: copy file to remote-host
- #   copy: src=hello.sh dest="{{ dest }}" owner=scaleworks group=scaleworks mode=0644
+ - name: install java 1.7
+   yum: 
+     name: java-1.7.0-openjdk-devel.x86_64 
+     state: present
+   sudo: yes
 
- - name: create directory
-   file: 
-     path: "{{ dest }}" 
-     state: directory 
-
- - name: copy file to remote-host
-   copy: 
-     src: hello.sh 
-     dest: "{{ dest }}" 
-
- - name: change file mode
-   file: 
-     path: "{{ dest }}/hello.sh" 
-     owner: scaleworks
-     group: scaleworks
+ - name: install unzip
+   yum: 
+     name: unzip
+     state: present
+   sudo: yes
+   
+ - name: create ansible directory
+   file:
+     path: /home/vagrant/ansible/
+     state: directory
      mode: 0755
 
- - name: execute shell 
-   shell: nohup ./hello.sh & sleep 2
-   args:
-     chdir: "{{ dest }}/"
+ - name: download jetty
+   get_url: 
+     url:  http://download.eclipse.org/jetty/9.2.15.v20160210/dist/jetty-distribution-9.2.15.v20160210.zip
+     dest: "/home/vagrant/ansible/jetty-9.2.15.zip"
+     
+ - name: decompress package
+   unarchive:
+     src: /home/vagrant/ansible/jetty-9.2.15.zip
+     dest: /home/vagrant/ansible/jetty-9.2.15
 
- - name: Get process ID
-   shell: pgrep -u scaleworks -f hello.sh
-   register: pid_result
+ - name: create ROOT directory
+   file:
+     path: /home/vagrant/ansible/jetty-9.2.5/webapps/ROOT
+     state: directory
+     mode: 0755
 
- - name: Stop hello.sh
-   shell: "sleep 5 && kill {{ pid_result.stdout }}"
+ - name: copy index.html
+   copy: 
+     src: index.html
+     dest: /home/vagrant/ansible/jetty-9.2.5/webapps/ROOT
+
+ - name: restart jetty
+   shell: /home/vagrant/ansible/jetty-9.2.5/bin/jetty.sh restart
